<resources>
    <string name="app_name">module_patrol</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="start_patrol">开始巡查</string>
    <string name="stop_patrol">结束巡查</string>
    <string name="event_up">巡查上报</string>
    <string name="wait_up_record">待上传事项</string>
    <string name="history_record">历史上报信息</string>

    <string name="users">成员</string>
    <string name="project_list">工程列表</string>
    <string name="project_info">工程信息</string>
    <string name="project_location">工程位置</string>
    <string name="project_member">部门成员</string>
    <string name="project_member_number">共 %s 人</string>

    <string name="personnel_location">人员位置</string>
    <string name="danger_location">隐患点</string>
    <string name="statr_patrol_time">开始时间: %s</string>
    <string name="patrol_distance">巡查距离: %s m</string>
    <string name="patrol_duration">巡查时长: %s </string>
    <string name="patrol_record">巡查记录</string>
    <string name="patrol_dynamic">巡查动态</string>
    <string name="marker_list">标注列表</string>
    <string name="location_succeed">定位成功</string>
    <string name="location_fail">定位失败</string>

    <!-- 事件上报 -->
    <string name="belong_project">所属工程</string>

    <string name="event_type">事件类型</string>
    <string name="select_event_type">请选择事件类型</string>
    <string name="event_title">巡查内容</string>
    <string name="input_event_title">请输入巡查内容</string>
    <string name="event_remark">巡查情况记录</string>
    <string name="input_event_remark">请输入巡查情况记录</string>
    <string name="handled_by_oneself">已自行处理</string>
    <string name="everything_normal">一切正常</string>
    <string name="commit_object">提交对象</string>
    <string name="select_commit_object">请选择提交对象</string>

    <string name="please_upload_at_least_one_picture">请至少请上传一张图片~</string>
    <string name="current_location">当前地点</string>
    <string name="refresh_location">定位不准?点我重试</string>
    <string name="patrol_remark">请描述详情(最多200个字)</string>
    <string name="photo_or_video">照片/视频</string>
    <string name="gps_location">GPS 定位(无法获取地址信息)</string>
    <string name="text_count_200">%1$d/200</string>
    <string name="upload">提交</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功~</string>
    <string name="delete_fail">删除失败~</string>
    <string name="save_success">保存成功~</string>
    <string name="save_fail">保存失败~</string>

    <!-- 事件详情页 -->
    <string name="event_info">事件信息</string>
    <string name="event_source">事件来源</string>
    <string name="upload_user">上报人:</string>
    <string name="upload_time">上报时间:</string>
    <string name="upload_address">上报地址:</string>
    <string name="affiliation_project">所属工程:</string>

    <string name="scene_pictures">现场图片</string>


</resources>
