<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CommonActivity">
    <include layout="@layout/view_include_toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            style="@style/CommonPadding_tbm_lrh"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CommonBoldText"
                android:text="@string/event_source"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/CommonGreyLightShape">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/CommonText"
                        android:text="@string/upload_user"/>
                    <TextView
                        android:id="@+id/tv_upload_user"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:layout_marginLeft="@dimen/spacing_h"
                        style="@style/CommonText"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_l"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/CommonText"
                        android:text="@string/upload_time"/>
                    <TextView
                        android:id="@+id/tv_upload_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:layout_marginLeft="@dimen/spacing_h"
                        style="@style/CommonText"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_l"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/affiliation_project"/>
                    <TextView
                        android:id="@+id/tv_affiliation_project"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:layout_marginLeft="@dimen/spacing_h"
                        style="@style/CommonText"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_l"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/upload_address"/>
                    <TextView
                        android:id="@+id/tv_upload_address"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:layout_marginLeft="@dimen/spacing_h"
                        style="@style/CommonText"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CommonBoldText"
                android:layout_marginTop="@dimen/spacing_m"
                android:text="@string/event_title"/>
            <TextView
                android:id="@+id/tv_event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CommonGreyLightShape"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CommonBoldText"
                android:layout_marginTop="@dimen/spacing_m"
                android:text="@string/event_remark"/>
            <TextView
                android:id="@+id/tv_event_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CommonGreyLightShape"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CommonBoldText"
                android:layout_marginTop="@dimen/spacing_m"
                android:text="@string/scene_pictures"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_scene_pictures"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
