<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CommonActivity">
    <include layout="@layout/view_include_toolbar"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_m"
        style="@style/CommonPadding_tbm_lrh"
        android:background="@color/white">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="@dimen/spacing_xxh"
                android:layout_height="@dimen/spacing_xxh"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_margin="@dimen/spacing_m"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_architecture" />
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iv_avatar"
                android:layout_alignTop="@id/iv_avatar"
                style="@style/CommonText"/>
            <TextView
                android:id="@+id/tv_remark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv_avatar"
                android:layout_below="@id/tv_name"
                android:layout_marginTop="@dimen/spacing_m"
                style="@style/CommonLightText"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">
            <RelativeLayout
                android:id="@+id/rl_project_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CommonPadding_tbm_lrh">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/project_member"
                    style="@style/CommonText"/>
                <TextView
                    android:id="@+id/tv_member_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@mipmap/ic_arrow_right"
                    android:layout_alignParentRight="true"
                    style="@style/CommonLightText"/>
            </RelativeLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_m"
                android:layout_marginRight="@dimen/spacing_m"/>
            <View style="@style/CommonLine" android:layout_marginTop="@dimen/spacing_l"/>
            <RelativeLayout
                android:id="@+id/rl_patrol_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CommonPadding_tbm_lrh">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/patrol_record"
                    style="@style/CommonText"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@mipmap/ic_arrow_right"
                    android:layout_alignParentRight="true"
                    style="@style/CommonLightText"/>
            </RelativeLayout>
            <View style="@style/CommonLine" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CommonPadding_tbm_lrh">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/project_location"
                    style="@style/CommonText"/>
                <TextView
                    android:id="@+id/tv_project_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    style="@style/CommonLightText"/>
            </RelativeLayout>
        </LinearLayout>

    <com.baidu.mapapi.map.MapView
        android:id="@+id/mapView"
        android:layout_marginTop="@dimen/spacing_l"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
